# duckdb_notion

./: .gitignore  API_VERSION_INFO.md  CHANGELOG.md  CMakeLists.txt  README.md  SETUP.md  TESTING_GUIDE.md  test_queries.sql
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
_notebooks/: 01-getting-started.html  01-getting-started.qmd  02-data-analysis.qmd  03-etl-pipeline.qmd  README.md  donuts-test-traditional.qmd
docs/: CNAME  index.html  script.js  style.css
src/: notion_auth.cpp  notion_extension.cpp  notion_read.cpp  notion_requests.cpp  notion_utils.cpp  notion_write.cpp
src/include/: notion_auth.hpp  notion_extension.hpp  notion_read.hpp  notion_requests.hpp  notion_utils.hpp  notion_write.hpp
